# ekf_pose

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  package.xml  项目.md
dataset_tools/: align_gnss_to_odom_bag.py  create_odom_dropout_window_bag.py  ctu_mrs_mas_to_project_bag.py  gnss_smoothed_odom_bag.py  inject_sensor_anomalies.py  kari_bag_to_project_bag.py  mun_frl_benchmark_to_project_bag.py  mun_frl_to_project_bag.py  rssi_rtk_to_project_bag.py
docs/: README.md  algorithm.md  core_code_walkthrough.md  ekf_node_function_reference.md  gnss_validation_experiment_record.md  odom_ablation_experiment_summary.md  platform_bag_recording.md  reproduction.md  usage.md  validation_demo.md
include/: conversion.h  ekf.h
launch/: data2_aligned_gnss_display.rviz  data_odom_ablation_live.rviz  ekf.rviz  ekf_compare.rviz  ekf_compare_visual.launch  ekf_lidar.launch  ekf_lidar_minimal.rviz  ekf_three_paths_odom.rviz  mun_frl_bridge.launch  vio_guided_ekf.launch  vio_guided_minimal.rviz  vo_guided_ekf.launch  vo_guided_minimal.rviz
results/: README.md  health_observation_adaptive_switch_report.md  验证方案.md
results/all_gps_benchmark/: algorithm_improvement_report.md  fusion_benchmark_metrics.csv  fusion_benchmark_table.tex
results/all_gps_benchmark_health/: benchmark.json  fusion_benchmark_metrics.csv  (+1 more)
scripts/: benchmark_gnss_fusion.py  evaluate_gnss_fusion.py  evaluate_odom_dropout_window.py  mun_frl_topic_bridge.py  persist_review_paths.py  plot_benchmark_results.py  plot_ekf_odom_error_stats.py  publish_bag_aligned_gnss_paths.py  publish_display_frames.py  run_layer_validation.py  test_align_gnss_to_odom_bag.py  test_display_launch_config.py  test_ekf_smoothing_config.py  test_gnss_alignment_defaults.py  test_gnss_alignment_refinement_config.py  test_odom_dropout_smoothness.py  test_odom_recovery_config.py  test_publish_display_frames.py  test_vio_gnss_guidance.py  test_vo_gnss_guidance.py  vio_gnss_imu_guidance.py  vo_gnss_imu_guidance.py
src/: conversion.cpp  ekf_node_vio_timesync_with_acc_pub.cpp  imu_add_noise.cpp
thesis/: md_to_docx.py  复杂遮挡环境下飞行器连续稳定定位技术_初稿.docx  复杂遮挡环境下飞行器连续稳定定位技术_初稿_v1.docx  复杂遮挡环境下飞行器连续稳定定位技术_终稿.docx  复杂遮挡环境下飞行器连续稳定定位技术_终稿.md  复杂遮挡环境下飞行器连续稳定定位技术_终稿_V2.docx  复杂遮挡环境下飞行器连续稳定定位技术_终稿_V2.md  复杂遮挡环境下飞行器连续稳定定位技术_终稿_Word公式.docx
(+279 files in other folders)
